# weo-reader

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  countries.py  example.py  example_gdp.py  example_gov.py  example_readme.py  genindex.html  index.html  justfile  make_conf.py  objects.inv  package-lock.json  package.json  py-modindex.html  pyproject.toml  readme.py  requirements.txt  search.html  searchindex.js  setup.py  streamlit_app.py  test_weo.py  test_weo_dataframe.py  todo.txt  upload.bat  weo.html  weo.py
.doctrees/: environment.pickle  index.doctree  weo.doctree
.github/workflows/: docs-build.txt  poetry.yaml  poetry.yml  python.yaml
_sources/: weo.rst.txt
docs/: conf.py  index.rst  weo.rst
example/: aviz.py  countries.py  country_plot.py  example.py  gdp.py  index.html  missingno.py  pdfs.py  readme.py  sparklines.py  weo.ipynb
images/flags/: readme.txt
tests/: test_weo.py  test_weo_dataframe.py  test_weo_dates.py  test_weo_download.py  test_weo_readme.py  test_weo_version.py
weo/: __init__.py  dataframe.py  dates.py  download.py
