[tool.poetry]
name = "weo"
version = "0.8.4"
description = "Python client to download IMF World Economic Outlook (WEO) dataset as pandas dataframes."
authors = ["Evgeny Pogrebnyak <e.pogrebnyak@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/epogrebnyak/weo-reader"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pandas = "^2.1.0"
httpx = "^0.27"
iso3166 = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^8.1"
matplotlib = "^3.7"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
